--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
-    "axios": "^0.27.2",
-    "dotenv": "^16.0.1",
+    "dotenv-webpack": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.10.1",
